# ktrdr

./: .dockerignore  .env.dev.example  .env.distributed.example  .env.example  .env.sandbox  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_INDICATORS.md  BACKTESTING_EXECUTION_AUDIT.md  CLAUDE-training-fix-plan.md  CLAUDE.md  DATAMANAGER_FUNCTIONALITY_AUDIT.md  DATAMANAGER_REDUCTION_DETAILED_PLAN.md  DATA_LOADING_IMPROVEMENTS.md  Dockerfile  Dockerfile.dev  HEAD_TIMESTAMP_FIX_SUMMARY.md  Makefile  NEURAL_ARCHITECTURE_FIXES.md  PACE_LIMITING_FIX_SUMMARY.md  PHASE4_VALIDATION_SUMMARY.md  PHASE_2_TESTING_RESULTS.md  PROGRESS_MANAGER_INTEGRATION_PLAN.md  PROGRESS_TRACKING_IMPLEMENTATION.md  README.md  STRATEGY_CLI_GUIDE.md  TESTING_GUIDE.md  UNIFIED_CLI_GUIDE.md  UNIT_TEST_RECOVERY_PLAN.md  V2_CLEANUP_VALIDATION_COMPLETE.txt  VOLUME_HANDLING_ANALYSIS.md  alembic.ini  build_docker_dev.sh  conftest.py  debug_ib_connection.py  debug_neural_predictions.py  debug_universal_training.py  demo_data_loading_improvements.py  (+52 more)
.claude/: PERMISSIONS.md  settings.local.example.json
.devops-ai/: project.md
.github/: README.md
.squad/: executor.sh  loop_lib.sh  loop_runner.sh  team.md  test_synthesis.sh
alembic/: env.py
autoresearch/: harness.py  program.md
config/: database.yaml  docs_config.yaml  fuzzy.yaml  ib_host_service.yaml  indicators.yaml  ktrdr_metadata.yaml  multi_timeframe_indicators_example.yaml  multi_timeframe_training_config.yaml  persistence.yaml  settings.yaml  training_host_service.yaml  training_presets.py  workers.dev.yaml  workers.prod.yaml
configs/: ensemble_context_gated.yaml  ensemble_context_gated_e2e.yaml  ensemble_regime_routed.yaml  ensemble_regression_context_gated.yaml  ensemble_regression_context_gated_container.yaml  ensemble_regression_regime_only.yaml  ensemble_regression_regime_only_container.yaml  ensemble_tb_context_gated.yaml  ensemble_tb_context_gated_container.yaml  ensemble_tb_regime_only.yaml  ensemble_tb_regime_only_container.yaml
data/: symbol_discovery_cache.json
docker/: CLAUDE.md  HEALTH_CHECK_EXPLANATION.md  build_docker_dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.research.yml  docker-compose.yml  docker_dev.sh
docs/: BREAKING_CHANGES_INDICATORS.md  CONTAINER_E2E_TESTING.md  CRITICAL_CHART_JUMPING_FIX.md  IB_CONNECTION_REFACTOR_PLAN.md  INDICATORS_EXPANSION_PLAN.md  MCP_IMPROVEMENTS_PLAN.md  MCP_TOOLS_FIX_PLAN.md  TESTING_MCP_ASYNC.md  adding_new_indicators.md  cicd_guide.md  configuration.md  docker-networking-ib-gateway.md  docker_infrastructure_guide.md  exhaustive-testing-quick-reference.md  feature-engineering-analysis.md  feature-engineering-complete-removal-analysis.md  feature-engineering-removal-completion.md  feature-engineering-removal-plan.md  ib-architecture.md  ib-connection-lessons-learned.md  ib-connection-resilience-implementation.md  ib-testing-guide.md  index.md  local_ci_workflow.md  logging-guidelines.md  migration-strategy.md  multi-symbol-training-plan.md  phase0-deployment-guide.md  phase0-final-validation-report.md  phase0-script-organization.md  phase0-stability-testing-guide.md  phase0-troubleshooting-checklist.md  sleep-mode-investigation-final-report.md  standard-indicators-replacement-plan.md  strategy-grammar.md  style-guide.md  training-host-service-fix-plan.md  updated-standard-indicators-replacement-plan.md
examples/: api_models_example.py  cli_visualization_demo.sh  cli_visualization_verification.py  data_manager_example.py  fuzzy_config_example.py  fuzzy_config_strategy_example.py  indicator_api_examples.py  indicator_config_example.py  indicator_example.py  indicator_theme_example.py  line_chart_styles_example.py  simple_candlestick_example.py  simple_visualizer_example.py  theme_switching_example.py  visualization_example.py  visualization_multi_panel_example.py  volume_histogram_example.py
exploration/: lightweight_charts_poc.html
frontend/: package-lock.json  package.json  vite.config.js
ib-host-service/: README.md  config.py  main.py  requirements.txt  start.sh  stop.sh
ktrdr/: CLAUDE.md  __init__.py  metadata.py  version.json  version.py
mcp/: CLAUDE.md  Dockerfile  MCP_TOOLS.md  README.md  __init__.py  build_mcp.sh  claude_mcp_config.json  claude_mcp_config.preprod.json  endpoint_mapping.json  requirements.txt  restart_mcp.sh  stop_mcp.sh
memory/: hypotheses.yaml
migrations/: 000_init_timescaledb.sql  001_add_checkpoint_tables.sql
monitoring/: prometheus-dev.yml  prometheus.yml
orchestrator/: __init__.py  __main__.py  cli.py  coding_agent_container.py  config.py  discord_notifier.py  e2e_runner.py  environment.py  errors.py  escalation.py  haiku_brain.py  health.py  llm_interpreter.py  lock.py  loop_detector.py  milestone_runner.py  models.py  notifications.py  plan_parser.py  runner.py  sandbox.py  state.py  task_runner.py  telemetry.py
research_agents/: __init__.py  manual_validation.md  pyproject.toml  types.py
results/: multi_timeframe_training_results.json
scripts/: README.md  basic_ib_connection_check.py  bootstrap_v15_memory.py  build_prompt.py  cleanup_poisoned_data.py  coding-agent-claude.sh  coding-agent-init.sh  coding-agent-reset.sh  coding-agent-shell.sh  debug_cli.py  demo_multi_timeframe_labels.py  e2e_v2_memory.sh  fuzzy_engine_verification.py  fuzzy_validation.py  generate_api_docs.py  generate_v15_strategies.py  ib_port_forward.sh  init-shared-data-dir.sh  ktrdr_cli.py  logging_example.py  mf_verification.py  migrate_indicator_naming.py  migrate_strategy_input_transforms.py  migrate_to_feature_ids.py  retrain_regime.py  run_api_server.py  run_container_e2e_tests.py  run_ensemble_backtest.py  run_ib_tests.py  run_real_e2e_tests.sh  run_v15_experiments.sh  sandbox-claude.sh  sandbox-init.sh  sandbox-reset.sh  sandbox-shell.sh  setup-local-prod.sh  setup_dev.sh  switch-backtest-mode.sh  switch-training-mode.sh  sync-env.sh  (+37 more)
specification/: 2025-05-29-backend-status.md  ADR-001-current-architecture-assessment.md  ADR-003-neuro-fuzzy-strategy-framework.md  ADR-008-current-architecture-assessment.md  (+51 more)
(+3237 files in other folders)
