[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "KTRDR"
version = "1.0.7.2"
description = "Advanced trading system with fuzzy logic and machine learning capabilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.13.0",
    "streamlit>=1.22.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "ib_insync>=0.9.85",
    "pandas-ta>=0.3.14b0",
    "pyyaml>=6.0",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "python-dotenv>=1.1.0",
    "tomli>=2.2.1",
    "rich>=14.0.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "httpx>=0.28.1",
    "tomli-w>=1.2.0",
    "openai>=1.93.0",
    "anthropic>=0.57.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "redis>=6.2.0",
    "aiohttp>=3.12.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "psutil>=5.9.0",
]

[project.scripts]
ktrdr = "ktrdr.cli:app"

[dependency-groups]
dev = [
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
