[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ktrdr"]

[project]
name = "KTRDR"
version = "1.0.7.2"
description = "Advanced trading system with fuzzy logic and machine learning capabilities"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.1.0",
    "tomli>=2.2.1",
    "rich>=14.0.0",
    "click>=8.0.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.0",  # Required for FastAPI's Jinja2Templates
    "uvicorn>=0.34.3",
    "watchfiles>=1.0.0",  # For efficient uvicorn --reload (avoids CPU-heavy polling)
    "httpx>=0.28.1",
    "tomli-w>=1.2.0",
    "anthropic>=0.57.1",
    "aiohttp>=3.12.14",
    "pydantic-settings>=2.10.1",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "pillow>=11.3.0",
    "starlette>=0.47.2",
    "urllib3>=2.5.0",
    "python-multipart>=0.0.18",
    "structlog>=23.0.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-instrumentation-logging>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-exporter-prometheus>=0.42b0",
    "prometheus-client>=0.19.0",
    "mcp[cli]>=1.2.0",
    "aiosqlite>=0.21.0",
    "python-json-logger>=4.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.7.1",
    "scikit-learn>=1.6.1",
]
ib = [
    "ib_async>=2.1.0",  # For IB host service (replaces archived ib_insync)
]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "psutil>=5.9.0",
]

[project.scripts]
ktrdr = "ktrdr.cli:main"
kinfra = "ktrdr.cli.kinfra.main:main"
orchestrator = "orchestrator.cli:main"

[dependency-groups]
dev = [
    "asyncpg>=0.30.0",
    "bandit[toml]>=1.8.6",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pandas-stubs>=2.2.2.240807",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.10",
    "scikit-learn-stubs>=0.0.3",
    "types-pillow>=10.2.0.20240822",
    "types-psutil>=7.0.0.20250601",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250611",
    "types-tabulate>=0.9.0.20241207",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["ktrdr", "mcp"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]  # allow assert statements in tests
# Pytest fixture protection - prevents ruff from removing imports that pytest needs
"tests/visualization/test_*.py" = ["F401"]  # allow fixture imports that appear unused
"tests/*/conftest.py" = ["F401"]  # allow fixture definitions that appear unused
"tests/**/test_*.py" = ["F811"]  # allow fixture redefinitions in test files

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # skip assert_used test

[tool.coverage.run]
source = ["ktrdr"]
omit = [
    "ktrdr/scripts/*",
    "tests/*",
    "ktrdr/dev/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
